--- a/style/main.css
+++ b/style/main.css
@@ -45,7 +45,7 @@ h1 span {
     margin-bottom: 10px;
 }
 
-p {
+.text p {
     color: #DEDEDE;
     font-family: 'Open Sans', sans-serif;
     font-size: 19px;
@@ -53,7 +53,8 @@ p {
     margin-bottom: 42px;
 }
 
-a {
+.main a,
+.promo a {
     color: #1E2F40;
     background-color: #FBB731;
     border: 1px;
@@ -80,8 +81,111 @@ a {
 
 }
 
-img {
+.main img {
     width: 829px;
     position: absolute;
     right: -168px;
+}
+
+.promo {
+    padding-top: 186px;
+    padding-bottom: 185px;
+}
+
+.promo-left,
+.promo-right {
+    flex: 0 0 49%;
+    color: #fff;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.promo-left {
+    background-image: url(../image/promo-left.png);
+    padding: 116px 50px;
+}
+
+.promo-right {
+    background-image: url(../image/promo-right.png);
+    padding: 102px 50px;
+}
+
+.sales {
+    font-size: 14px;
+    font-weight: 900;
+    background: #F37335;
+    padding: 5px 19px;
+    border-radius: 14px;
+    display: inline-block;
+    text-transform: uppercase;
+    margin-bottom: 3px;
+}
+
+.cost {
+    font-size: 60px;
+    font-weight: 900;
+    margin-bottom: 8px;
+}
+
+.description {
+    font-family: 'Open Sans', sans-serif;
+    color: #FAF9F9;
+    font-size: 15px;
+    line-height: 24px;
+}
+
+.promo-left .description {
+    max-width: 392px;
+}
+
+.promo-right .description {
+    max-width: 300px;
+    margin-bottom: 20px;
+}
+
+.free {
+    font-size: 44px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.footer {
+    background: #1E2F40;
+    color: #fff;
+}
+
+.logo {
+    width: 63px;
+    height: 56px;
+}
+
+.item h2 {
+    font-size: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+.item ul,
+.tel ul {
+    list-style-type: none;
+}
+
+.item li {
+    margin-bottom: 9px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    color: #FAF9F9;
+}
+
+.item a {
+    color: #DEDEDE;
+    text-decoration: none;
+    
+}
+
+.item span {
+    color: #FAF9F9;
+    display: block;
 }
